Added a page showing the changelog.

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ doc/plugin/tags/quickref.rb -text
 doc/src/.htaccess -text
 doc/src/404-error.page -text
 doc/src/default.template -text
+doc/src/details/changes.page -text
 doc/src/details/contribute.page -text
 doc/src/details/development.page -text
 doc/src/details/index.page -text
