--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -19,12 +19,13 @@
     <div id="sidebar">
       {menu: {menuStyle: sidebar}}
 
-      <form id="searchbox_000699377096513254569:zhhnzsrbzfu" action="http://www.google.com/cse">
+      <form id="searchbox_000699377096513254569:zhhnzsrbzfu" action="http://www.google.com/cse" 
+        onsubmit="pageTracker._trackPageview('/search/' + document.getElementById('q').value);">
         <fieldset>
           <legend>Search the site</legend>
           <input type="hidden" name="cx" value="000699377096513254569:zhhnzsrbzfu" />
           <input type="hidden" name="cof" value="FORID:0" />
-          <input name="q" type="text" size="15" />
+          <input id="q" name="q" type="text" size="15" />
           <input type="submit" name="sa" value="Search" />
         </fieldset>
       </form>
@@ -38,11 +39,16 @@
 <div id="footerWrapper">
   {menu: {menuStyle: footer}}
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ?
+  "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost +
+  "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-_uacct = "UA-546645-2";
-urchinTracker();
+   var pageTracker = _gat._getTracker("UA-546645-2");
+   pageTracker._initData();
+   pageTracker._trackPageview();
 </script>
 </body>
 </html>
