--- a/doc/src/frontpage.template
+++ b/doc/src/frontpage.template
@@ -38,11 +38,16 @@ template: ~
 <div id="footerWrapper">
   {menu: {menuStyle: footer}}
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ?
+  "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost +
+  "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-_uacct = "UA-546645-2";
-urchinTracker();
+   var pageTracker = _gat._getTracker("UA-546645-2");
+   pageTracker._initData();
+   pageTracker._trackPageview();
 </script>
 </body>
 </html>
