Added a favicon to the site.

--- a/doc/config.yaml
+++ b/doc/config.yaml
@@ -5,4 +5,4 @@ File/PageHandler:
 # See http://rubyforge.org/pipermail/webgen-users/2007-November/000086.html to
 # alter webgen so that the .htaccess file is copied.
 File/CopyHandler:
-  paths: ['**/*.css', '**/*.png', '**/.htaccess']
+  paths: ['**/*.css', '**/*.png', '**/.htaccess', 'favicon.ico']
