--- a/.gitattributes
+++ b/.gitattributes
@@ -40,6 +40,7 @@ doc/src/examples/send-most-money.page -text
 doc/src/examples/square-tiling.page -text
 doc/src/examples/sudoku-set.page -text
 doc/src/examples/sudoku.page -text
+doc/src/favicon.ico -text
 doc/src/features.page -text
 doc/src/frontpage.template -text
 doc/src/images/background.png -text
