The 404-error page now gives an absolute path to its style sheet so that it doesn't break when not rendered in the root.

--- a/doc/src/default.template
+++ b/doc/src/default.template
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="{relocatable: styles.css}" media="screen" />
   <link rel="stylesheet" type="text/css" href="{resource: webgen-css}" media="screen" />
   <meta name="description" content="{description:}" />
+  {additionalHeadContents:}
 </head>
 <body>
 <div id="header">
