--- a/doc/config.yaml
+++ b/doc/config.yaml
@@ -2,6 +2,7 @@
 File/PageHandler:
   defaultMetaInfo:
     blocks: [[content, rspec]]
+    additionalHeadContents: ''
 # See http://rubyforge.org/pipermail/webgen-users/2007-November/000086.html to
 # alter webgen so that the .htaccess file is copied.
 File/CopyHandler:
