The sidebar navigation now includes shortcuts to the current page's sections.

--- a/doc/config.yaml
+++ b/doc/config.yaml
@@ -1,7 +1,7 @@
 # Configuration file for webgen
 File/PageHandler:
   defaultMetaInfo:
-    blocks: [[content, rspec]]
+    blocks: [[content, gecoder]]
     additionalHeadContents: ''
 # See http://rubyforge.org/pipermail/webgen-users/2007-November/000086.html to
 # alter webgen so that the .htaccess file is copied.
