--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,8 @@
 /Rakefile -text
 doc/config.yaml -text
 doc/metainfo.yaml -text
+doc/plugin/add_header_ids.rb -text
+doc/plugin/content_converter.rb -text
 doc/plugin/googlesitemap.rb -text
 doc/plugin/menustyles/breadcrumbs.rb -text
 doc/plugin/menustyles/footer.rb -text
