--- a/doc/src/.htaccess
+++ b/doc/src/.htaccess
@@ -7,3 +7,4 @@ RewriteRule ^documentation/constraints/quick-reference\.html /documentation/oper
 RewriteRule ^documentation/constraints/integer-constraints\.html /documentation/operands/integer-operands.html [R=301,L]
 RewriteRule ^documentation/constraints/boolean-constraints\.html /documentation/operands/boolean-operands.html [R=301,L]
 RewriteRule ^documentation/constraints/set-constraints\.html /documentation/operands/set-operands.html [R=301,L]
+RewriteRule ^documentation/constraints /documentation/operands [R=301,L]
