Added website documentation for selected set operands and set elements operands.

--- a/.gitattributes
+++ b/.gitattributes
@@ -37,6 +37,8 @@ doc/src/documentation/operands/boolean-operands.page -text
 doc/src/documentation/operands/index.page -text
 doc/src/documentation/operands/integer-enum-operands.page -text
 doc/src/documentation/operands/integer-operands.page -text
+doc/src/documentation/operands/selected-set-operands.page -text
+doc/src/documentation/operands/set-elements-operands.page -text
 doc/src/documentation/operands/set-enum-operands.page -text
 doc/src/documentation/operands/set-operands.page -text
 doc/src/examples/index.page -text
