Capitalized a forgotten header in the tab menu.

--- a/doc/metainfo.yaml
+++ b/doc/metainfo.yaml
@@ -12,7 +12,7 @@ documentation:
 details:
   orderInfo: 6
 details/index.page:
-  directoryName: Project details
+  directoryName: Project Details
   
 documentation/index.page:
   orderInfo: 10
