--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@ doc/plugin/menustyles/footer.rb -text
 doc/plugin/menustyles/sections.rb -text
 doc/plugin/menustyles/sidebar.rb -text
 doc/plugin/menustyles/tabs.rb -text
+doc/plugin/tags/example-script.rb -text
 doc/plugin/tags/example.rb -text
 doc/plugin/tags/import-rdoc.rb -text
 doc/plugin/tags/quickref.rb -text
@@ -49,6 +50,7 @@ doc/src/documentation/searching_for_solutions.page -text
 doc/src/examples/index.page -text
 doc/src/examples/magic-sequence.page -text
 doc/src/examples/n-queens.page -text
+doc/src/examples/nonogram.page -text
 doc/src/examples/send-more-money.page -text
 doc/src/examples/send-most-money.page -text
 doc/src/examples/square-tiling.page -text
@@ -72,6 +74,7 @@ doc/src/styles.css -text
 example/equation_system.rb -text
 example/example_helper.rb -text
 example/magic_sequence.rb -text
+example/nonogram.rb -text
 example/queens.rb -text
 example/send_more_money.rb -text
 example/send_most_money.rb -text
