Fixed a typo in the menu order.

--- a/doc/metainfo.yaml
+++ b/doc/metainfo.yaml
@@ -83,7 +83,7 @@ examples/nonogram.page:
   orderInfo: 17
 examples/square-tiling.page:
   orderInfo: 18
-examples/minsweeper.page:
+examples/minesweeper.page:
   orderInfo: 19
 ---
 details/rubyforge.html:
