--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /README -text
 /Rakefile -text
 /THANKS -text
+/TODO -text
 doc/config.yaml -text
 doc/metainfo.yaml -text
 doc/plugin/contentconverters/add_header_ids.rb -text
